--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "knex": "^3.0.1",
+    "mysql": "^2.18.1",
+    "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
