--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "axios": "^1.6.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "knex": "^3.0.1",
     "mysql": "^2.18.1",
     "next": "14.0.2",
+    "oracledb": "^6.2.0",
+    "pg-query-stream": "^4.5.3",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1"
