--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "knex": "^3.0.1",
+    "mongodb": "^6.2.0",
     "mysql": "^2.18.1",
     "next": "14.0.2",
     "oracledb": "^6.2.0",
