--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg-query-stream": "^4.5.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
